# mcp-gilbut

./: function_calling.py  main.py  mcp-sample.py  mcp_basic.py  mcp_client.py  mcp_server.py  pyproject.toml  sse_client.py  sse_server.py
explorer-server/: main.py
math-server/: math_server.py
rag-server/: main.py  office.py
web-search-server/: main.py
